adding tests for payouts