@@ -169,12 +169,38 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                    <argLine>${surefireArgLine}</argLine>
+                    <!--Recommended to set in env or settings.xml-->
+                    <systemPropertyVariables>
+                        <VELO_API_APIKEY>${VELO_API_APIKEY}</VELO_API_APIKEY>
+                        <VELO_API_APISECRET>${VELO_API_APISECRET}</VELO_API_APISECRET>
+                        <VELO_API_PAYORID>${VELO_API_PAYORID}</VELO_API_PAYORID>
+                        <VELO_BASE_URL>${VELO_BASE_URL}</VELO_BASE_URL>
+                    </systemPropertyVariables>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M4</version>
+                <version>2.22.0</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                    <argLine>${failsafeArgLine}</argLine>
+                    <!--Recommended to set in env or settings.xml-->
+                    <systemPropertyVariables>
+                        <VELO_API_APIKEY>${VELO_API_APIKEY}</VELO_API_APIKEY>
+                        <VELO_API_APISECRET>${VELO_API_APISECRET}</VELO_API_APISECRET>
+                        <VELO_API_PAYORID>${VELO_API_PAYORID}</VELO_API_PAYORID>
+                        <VELO_BASE_URL>${VELO_BASE_URL}</VELO_BASE_URL>
+                    </systemPropertyVariables>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.openapitools</groupId>
